---------------------------------------------------------------------------------------------------
Version: 0.69.89
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.88
Date: 2025-07-26
  Changes:
    - Long stack inserter HP 160 => 400. I had forgotten to give it better stats.
    - Wind turbine max HP 200 => 250. A slight little buff, since these are on the outskirts usually.
    - Garbo grabber max HP 1000 => 600.
    - Biofused promethium science tech cost reduced: 1M => 100k. This should make it more viable to get this for less mega-basey setups.
---------------------------------------------------------------------------------------------------
Version: 0.69.87
Date: 2025-07-25
  Changes:
    - Reworded the planet briefing... again!
    - Another megabasing tip added
---------------------------------------------------------------------------------------------------
Version: 0.69.86
Date: 2025-07-23
  Changes:
    - Renamed Operation Crap Man, because that name sucked.
---------------------------------------------------------------------------------------------------
Version: 0.69.85
Date: 2025-07-23
  Changes:
    - Fixed fast replace group of long stack inserters.
    - New biofusion tech: +1 Cargo landing pad. This should aid with how limitted cargo landing pads are on Rubia in post game.
---------------------------------------------------------------------------------------------------
Version: 0.69.84
Date: 2025-07-17
  Changes:
    - Better long term fix for BZ-tin compatibility with a new rocket silo recipe.
---------------------------------------------------------------------------------------------------
Version: 0.69.83
Date: 2025-07-15
  Changes:
    - Fixed bug where trashsteroid shadows would permanently exist on your map.
    - Preparing for wind turbine UPS improvement.
    - Fixed incompat with BZTin messing with rocket silo recipe, leading to a softlock.