@@ -51,6 +51,9 @@ data:extend({{
     fast_replaceable_group = "ammo-turret",
     collision_box = {{-0.7, -0.7}, {0.7, 0.7}},
     selection_box = {{-1, -1}, {1, 1}},
+
+    heating_energy = "50kW",
+
     rotation_speed = 0.01 * 1.5,
     preparing_speed = 0.08,
     folding_speed = 0.08,
